--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -172,7 +172,7 @@
 
         const avatarURL = fetch(`/users/${id}/avatar`).then((data)=>{
             console.log(data);
-            console.log("hello");
+            // console.log("hello");
 
             if (data) {
                 if (data.url) {
