--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -171,7 +171,7 @@
         // console.log(id);
 
         const avatarURL = fetch(`/users/${id}/avatar`).then((data)=>{
-            console.log(data);
+            // console.log(data);
             // console.log("hello");
 
             if (data) {
