dinner bug fixed

--- a/views/dashboard/track.ejs
+++ b/views/dashboard/track.ejs
@@ -744,7 +744,7 @@
                                     if (dcarbsp < 85) {
                                         dinnercarbs.style.color = "burlywood";
                                     }
-                                    else if (bcarbsp >= 85 && bcarbsp <= 105) {
+                                    else if (dcarbsp >= 85 && dcarbsp <= 105) {
                                         dinnercarbs.style.color = "green";
                                     }
                                     else {
