--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -83,6 +83,32 @@
         .forgot-password-box button:active {
             transform: scale(.97);
         }
+
+        @media(max-width: 490px){
+            .forgot-password-box{
+                width: 300px;
+                padding: 5px 20px;
+            }
+            .forgot-password-box form input {
+                padding: 8px 16px;
+                width: 240px;
+            }
+            .forgot-head{
+                font-size: 1.4rem;
+            }
+            .forgot-desc {
+                font-size: .8rem;
+                text-align: center;
+            }
+            .forgot-password-box form button {
+                padding: 6px 72px;
+            }
+
+            .forgot-password-box .backBtn {
+                padding: 4px 84px;
+            }
+        }
+
     </style>
 
 
