--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -96,6 +96,35 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-weight: 700;
         }
+
+        @media(max-width: 515px){
+            .reset-password-box {
+                width: 260px;
+                height: 500px;
+                padding: 5px 20px;
+            }
+            .reset-head {
+                font-size: 1.6rem;
+                margin-bottom: 8px;
+            }
+            .reset-password-box form input {
+                padding: 6px 20px;
+                width: 200px;
+                margin-bottom: 13px;
+                outline: none;
+            }
+
+            .reset-password-box form button {
+                padding: 6px 102px;
+                margin-bottom: 4px;
+                background-color: rgb(61, 95, 174);
+                color: white;
+                border: 1px solid black;
+                font-weight: 700;
+                cursor: pointer;
+            }
+        }
+
     </style>
 
 
