--- a/partials/contact.ejs
+++ b/partials/contact.ejs
@@ -10,10 +10,10 @@
         <div class="contact-image"> <img src="./static/contact.jpg" alt=""> </div>
         <div class="contact-form">
             <form id="contactform" action="">
-                <input type="text" placeholder="Enter Your Name" name="name">
-                <input type="text" placeholder="Enter Your Contact Number" name="phone">
-                <input type="text" placeholder="Enter Your Email Address" name="email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Enter Your Query" name="query"></textarea>
+                <input type="text" placeholder="Enter Your Name" name="name" required>
+                <input type="text" placeholder="Enter Your Contact Number" name="phone" required>
+                <input type="text" placeholder="Enter Your Email Address" name="email" required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Enter Your Query" name="query" required></textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
