--- a/views/dashboard/profile.ejs
+++ b/views/dashboard/profile.ejs
@@ -37,7 +37,7 @@
                                 No goals
                             </div>
                             <div class="posts">
-                                Post : <span id="postNo">6</span>
+                                Post : <span id="postNo"></span>
                             </div>
                         </div>
                     </div>
