--- a/views/dashboard/profile.ejs
+++ b/views/dashboard/profile.ejs
@@ -169,7 +169,7 @@
                         bmi.style.color = "red";
                         weightStatus.innerHTML = "Severe Thinness";
                     }
-                    if (bmiVal >= 16 && bmiVal < 17) {
+                    else if (bmiVal >= 16 && bmiVal < 17) {
                         bmi.style.color = "red";
                         weightStatus.innerHTML = "Moderate Thinness";
                     }
