:sparkles: gmail connection updated
gmail connection updated

--- a/views/dashboard/viewDetails.ejs
+++ b/views/dashboard/viewDetails.ejs
@@ -98,7 +98,7 @@
             }).then((results) => {
                 var Items = results.items;
                 Items.forEach((item) => {
-                    console.log(item);
+                    // console.log(item);
 
                     const viewDetailsBox = document.createElement("div");
                     viewDetailsBox.classList.add("view-details-box");
