--- a/views/login.ejs
+++ b/views/login.ejs
@@ -162,11 +162,10 @@
         const signupForm = document.getElementById("signup");
         function handleSubmit(e) {
             // e.preventDefault();
-            console.log(e);
             const pass = e.srcElement[9].value;
-            console.log(pass);
+            // console.log(pass);
             const cpass = e.srcElement[10].value;
-            console.log(cpass);
+            // console.log(cpass);
             const Toast = Swal.mixin({
                 toast: true,
                 position: 'top-end',
