--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -221,11 +221,11 @@
 <script>
     function handleSubmit(e) {
         // e.preventDefault();
-        console.log(e);
+        // console.log(e);
         const pass = e.srcElement[0].value;
-        console.log(pass);
+        // console.log(pass);
         const cpass = e.srcElement[1].value;
-        console.log(cpass);
+        // console.log(cpass);
         const Toast = Swal.mixin({
             toast: true,
             position: 'top-end',
