--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -221,7 +221,7 @@
                         var weightv = e.srcElement[6].value;
                         var activityv = e.srcElement[7].value;
 
-                        console.log(e);
+                        // console.log(e);
 
 
                         const updatesettings_data = fetch(`/users/${result._id}`, {
@@ -284,7 +284,7 @@
                                     body: JSON.stringify({ "password": newp })
                                 }).then(res => res.json())
                                     .then((data) => {
-                                        console.log("password has been changed successfully");
+                                        // console.log("password has been changed successfully");
                                         Toast.fire({
                                             icon: 'success',
                                             title: 'Updated successfully'
